# code-fu

./: LICENSE  README.md
c/: callenvdump.c  testshellcode.c  tsc.c
css/clip-path/: lightning-power.css
excel/: toExcel.py
filesystem/: binView.py  changeEncoding.py
gdb/: debug.gdb
js/: scrollOnLoad.js
js/helpers/: arrays.js  downloaders.js  encryption.js  mathTools.js  misc.js  passwordManagement.js  pathAndApi.js  performanceTools.js
js/node/: filesystem.js  shell.js
json/: processJson.py
markdown/: README.md
powershell/: aes256-decrypt.ps1  aes256-encrypt.ps1  auxiliary.psm1  bytes-conversions.psm1  crypto.psm1  receive-tcpmessage.ps1
python/: __shell__  __shell__.cmd  prime-gen.py
python/auxiliary/: arrays.py  conversions.py  data_analysis.py  dictionaries.py
python/classes/: config.py  cyber_chef.py  dec_passthrough_methods.py  jsonlocalstored.py  logger.py  matrix2d.py  persisted.py  proxy.py  ranges.py  rng.py  rotating_buffer_list.py  serializable.py
python/excel/: toExcel.py
python/filesystem/: changeEncoding.py
python/finance/: salaries.py
python/games/: monty_hall.py
python/json/: json_merger.py  splitJsonArray.py
python/pdf/: merge.py  split.py
python/sec/: build_sc.py  format_string_exploit.py  push_string_to_stack.py
regex/: expressions.js
rust/rustroller/: Cargo.toml
rust/rustroller/src/: dice.rs  diceroller.rs  lib.rs  main.rs  random.rs
rx/: regexps.js
shell/: uirc.bat  utils.sh
sublime-text/: Custom Python.sublime-build
templates/: cliableModule.py
visual-basic/: clipboard.vbs
vscode/: md.css
(+8 files in other folders)
