[package]
name = "rustroller"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.9.0"
lazy_static = "1.4.0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
panic = "abort"
